# parallel_theory_1

./: CMakeLists.txt  README.md  count_sin_sum.cpp  main.cpp
